# OpenTradingSystem

./: CMakeLists.txt  main.cpp
Apps/: CMakeLists.txt
Apps/BasicApp/: BasicApp.cpp  BasicApp.h  CMakeLists.txt  TestPlugin.xml
Apps/NamePrinterApp/: CMakeLists.txt  NamePrinterApp.cpp  NamePrinterApp.h  NamePrinterApp.xml
OTSCore/: CMakeLists.txt  EnginesManager.cpp
OTSCore/AppsEngine/: AppsEngine.cpp  AppsEngine.h
OTSLibrary/: CMakeLists.txt
OTSLibrary/include/Apps/: App.h
OTSLibrary/include/OTSLibrary/Apps/: App.h
OTSLibrary/include/OTSLibrary/Types/: AnyType.h  Printable.h  Uuid.h
OTSLibrary/include/types/: AnyType.h  Uuid.h
OTSLibrary/src/types/: Printable.cpp  Uuid.cpp
Tests/: CMakeLists.txt  TypesTests.cpp  tests.cpp
VersionControl/: CMakeLists.txt  git.cpp.in  git.h  git_watcher.cmake
